--- a/ExtentReport.html
+++ b/ExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Aug 5, 2023 11:56:04 PM</span></a>
+<a href="#"><span class="badge badge-primary">Aug 6, 2023 12:16:36 AM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">LoginTest</p>
             <p class="text-sm">
-              <span>11:56:09 PM</span> / <span>00:00:06:742</span>
+              <span>12:16:40 AM</span> / <span>00:00:06:871</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">LoginTest</h5>
-<span class='badge badge-success'>08.05.2023 11:56:09 PM</span>
-<span class='badge badge-danger'>08.05.2023 11:56:15 PM</span>
-<span class='badge badge-default'>00:00:06:742</span>
+<span class='badge badge-success'>08.06.2023 12:16:40 AM</span>
+<span class='badge badge-danger'>08.06.2023 12:16:47 AM</span>
+<span class='badge badge-default'>00:00:06:871</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,7 +104,7 @@
           <div class="card-toolbar node-info">
             <ul class="list-inline d-none d-sm-block">
               <li><span class="badge pass-bg log ">Pass</span></li>
-              <li><span class='badge badge-default'>30:06:730</span></li>
+              <li><span class='badge badge-default'>30:06:851</span></li>
               <li><span><i class="fa fa-paperclip"></i></span></li>
             </ul>
           </div>
@@ -121,32 +121,32 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:10 PM</td>
+        <td>12:16:42 AM</td>
         <td>
           Username entered on username filed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:10 PM</td>
+        <td>12:16:42 AM</td>
         <td>
           password entered on password filed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:56:15 PM</td>
+        <td>12:16:47 AM</td>
         <td>
           Clicked on Login button
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot235615544533600.png' src="C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot235615544533600.png">
+<img data-featherlight='C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot001647332922200.png' src="C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot001647332922200.png">
     
     </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:56:15 PM</td>
+        <td>12:16:47 AM</td>
         <td>
           <span class='badge white-text green'>purchaseMultipleProductTest case Passed</span>
         </td>
@@ -167,7 +167,7 @@
           <div class="test-detail">
             <p class="name">PurchaseProductTest</p>
             <p class="text-sm">
-              <span>11:56:15 PM</span> / <span>00:00:06:758</span>
+              <span>12:16:47 AM</span> / <span>00:00:06:528</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -176,9 +176,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">PurchaseProductTest</h5>
-<span class='badge badge-success'>08.05.2023 11:56:15 PM</span>
-<span class='badge badge-danger'>08.05.2023 11:56:22 PM</span>
-<span class='badge badge-default'>00:00:06:758</span>
+<span class='badge badge-success'>08.06.2023 12:16:47 AM</span>
+<span class='badge badge-danger'>08.06.2023 12:16:54 AM</span>
+<span class='badge badge-default'>00:00:06:528</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -190,7 +190,7 @@
           <div class="card-toolbar node-info">
             <ul class="list-inline d-none d-sm-block">
               <li><span class="badge pass-bg log ">Pass</span></li>
-              <li><span class='badge badge-default'>30:06:755</span></li>
+              <li><span class='badge badge-default'>30:06:526</span></li>
               <li><span><i class="fa fa-paperclip"></i></span></li>
             </ul>
           </div>
@@ -207,32 +207,32 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:17 PM</td>
+        <td>12:16:48 AM</td>
         <td>
           Username entered on username filed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>11:56:17 PM</td>
+        <td>12:16:48 AM</td>
         <td>
           password entered on password filed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:56:22 PM</td>
+        <td>12:16:54 AM</td>
         <td>
           Clicked on Login button
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot235622385340500.png' src="C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot235622385340500.png">
+<img data-featherlight='C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot001653847247200.png' src="C:\Users\ashin\Documents\APP Testing Version one\SeleniumCompleteFrameWork\screenshots\myScreenshot001653847247200.png">
     
     </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>11:56:22 PM</td>
+        <td>12:16:54 AM</td>
         <td>
           <span class='badge white-text green'>purchaseMultipleProductTest case Passed</span>
         </td>
@@ -260,13 +260,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Aug 5, 2023 11:56:04 PM</h3>
+<h3>Aug 6, 2023 12:16:36 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Aug 5, 2023 11:56:22 PM</h3>
+<h3>Aug 6, 2023 12:16:54 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -356,7 +356,7 @@
 </div></div>
 <script>
 var timeline = {
-"LoginTest":6.742,"PurchaseProductTest":6.758
+"LoginTest":6.871,"PurchaseProductTest":6.528
 };
 </script>
 <div class="row">
